--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,10 +26,10 @@
     steps:
       cloudFoundryDeploy:
         cloudFoundry: 
-          apiEndpoint: "https://api.cf.us10.hana.ondemand.com" # API Endpoint BTP CF Environment
-          org: "69fd37d7trial" # Org Name BTP CF Environment
-          space: "dev" # space Name BTP CF Environment
-          credentialsId: "cfdeploy" # nome credential creato nel servizio CI/CD
+          apiEndpoint: "https://api.cf.us10.hana.ondemand.com"
+          org: "69fd37d7trial"
+          space: "dev"
+          credentialsId: "cfdeploy"
           appName: ""
         mtaDeployParameters: "-f --version-rule ALL"
     artifactPrepareVersion:
