--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -27,7 +27,7 @@
     steps:
       cloudFoundryDeploy:
         cloudFoundry: 
-          apiEndpoint: "https://api.cf.us10.hana.ondemand.com"
+          #apiEndpoint: "https://api.cf.us10.hana.ondemand.com"
           org: "69fd37d7trial"
           space: "dev"
           credentialsId: "cfdeploy"
