--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,13 +26,17 @@ stages:
     tmsUpload: false
 steps:
   cloudFoundryDeploy:
-    cloudFoundry:
-      apiEndpoint: "https://api.cf.eu10.hana.ondemand.com" # please verify if this is your API endpoint. If not, please change it
-      org: "69fd37d7trial" # add your org here
-      space: "dev" # add your space here
-      credentialsId: "cfdeploy"
-      appName: ""
-    cfCredentialsId: "cfdeploy"
+    #cloudFoundry: #deprecated
+    #  apiEndpoint: "https://api.cf.eu10.hana.ondemand.com" # please verify if this is your API endpoint. If not, please change it
+    #  org: "69fd37d7trial" # add your org here
+    #  space: "dev" # add your space here
+    #  credentialsId: "cfdeploy"
+    #  appName: ""
+    apiEndpoint: "https://api.cf.eu10.hana.ondemand.com"
+    org: "69fd37d7trial"
+    space: "dev"
+    credentialsId: "cfdeploy"
+    appName: ""
     mtaDeployParameters: "-f --version-rule ALL"
   artifactPrepareVersion:
     versioningType: "cloud_noTag"
