--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -35,7 +35,7 @@ steps:
     apiEndpoint: "https://api.cf.us10.hana.ondemand.com"
     org: "69fd37d7trial"
     space: "dev"
-    credentialsId: "cfdeploy"
+    cfCredentialsId: "cfdeploy"
     appName: ""
     mtaDeployParameters: "-f --version-rule ALL"
   artifactPrepareVersion:
